
	Gross renaming: cObject became cOwnedObject, cPolymorphic became cObject;
	- cNamedObject introduced in between.
	- cArray, cQueue still handle cObject (old cPolymorphic), i.e. they can work
	  with non-owned objects as well

	Introduced cComponent, a common base class for cModule and cChannel
	- new methods to mention: isModule(), nedTypeName(), etc

	cSimpleModule, cSimulation:
	- removed: pause(), backtomod, pause_in_sendmsg (they were obsolete)
	- removed: breakpoint(), and its callback method in cEnvir, in Tkenv, etc..
	- sendDirect(): added overloaded methods that accept transmissionDelay as well
	- cancelEvent() now only allows cancelling self-messages

	cModule:
	- removed backgroundDisplayString()/setBackgroundDisplayString() and its compat
	  #defines displayStringAsParent() and setDisplayStringAsParent()
	- added isPlaceholder() to cModule
	- cPlaceHolderModule: renamed to cPlaceholderModule (lowercase h)
	- gate handling reorganized, so that gate IDs are stable (do not change
	  when the gate vector gets resized). Gate IDs are now interpreted as a
	  bitfield, so they cannot be used for iterating over all gates of a
	  module; cModule::GateIterator was introduced for this purpose.
	- gates() removed, as gate IDs are no longer integers in the 0..gates()-1
	  interval (use the new cModule::GateIterator for enumerating the gates).
	- added gateNames() method
	- className() for cModule (or cComponent in general) no longer lies
	  the NED type name, but returns the real C++ class name

	cMessage changes:
	- the length, bit error flag and encapsulated message cMessage fields
	  got factored out from cMessage, into the cPacket class (which extends
	  cMessage). All network packets (frames, datagrams, etc) are now
	  supposed to be subclassed from cPacket, not directly cMessage.
	  To port simulations into 4.0, in message descriptions (.msg files)
	  change relevant "message" keywords to "packet" (this will cause