@@ -42,11 +42,12 @@ class SIM_API cDefaultList : public cNoncopyableOwnedObject
     friend class cChannelType;
 
   private:
+    enum {FL_PERFORMFINALGC = 2};  // whether to delete owned objects in the destructor
+
+  private:
     cOwnedObject **vect; // vector of objects
     int capacity;        // allocated size of vect[]
     int size;            // number of elements used in vect[] (0..size-1)
-  public:
-    static bool doGC; // whether garbage collection is necessary in destructor
 
   private:
     void construct();
@@ -121,6 +122,36 @@ class SIM_API cDefaultList : public cNoncopyableOwnedObject
     /** @name Container functions. */
     // Note: we need long method names here because cModule subclasses from this class
     //@{
+
+    /**
+     * Whether the destructor will delete garbage objects (owned objects
+     * that have not been deallocated by destructors of derived classes);
+     * see setPerformFinalGC() for details. The default setting is false.
+     */
+    bool getPerformFinalGC() const  {return flags&FL_PERFORMFINALGC;}
+
+    /**
+     * Enables deleting of garbage objects in the destructor. Garbage objects
+     * are objects that are on this default list at destruct time (see
+     * defaultListSize() and defaultListGet()); they are practically objects
+     * owned by this module or channel that have not been deallocated
+     * by destructors of derived classes.
+     *
+     * This feature is turned off by default, because it cannot be implemented
+     * to work correctly in all cases. The garbage collection routine invokes
+     * the <tt>delete</tt> operator on all objects on the default list. This,
+     * however, causes problems (crash) in some cases: when the object has
+     * been allocated as an element in an array (e.g. <tt>new cQueue[10]</tt>),
+     * when the object is part of another object (e.g. <tt>struct X {cQueue q;};</tt>),
+     * or any other case when the object's pointer is not deleteable.
+     * Note that the presence of such data structures in a module
+     * does not automatically rule out the use of the final GC mechanism.
+     * Final GC can still be turned on if care is taken that the module's
+     * destructor deallocates those arrays and structs/objects, so that
+     * the contained objects disappear before the GC process could see them.
+     * Conclusion: only turn on final GC if you know what you are doing.
+     */
+    virtual void setPerformFinalGC(bool b)  {setFlag(FL_PERFORMFINALGC,b);}
 
     /**
      * Returns the number of elements stored.
