@@ -21,7 +21,8 @@ public class InifileConverter {
         "expressmode-autoupdate", "methodcalls-delay", "next-event-markers",
         "penguin-mode", "print-banners", "senddirect-arrows", "show-bubbles",
         "show-layouting", "slowexec-delay", "update-freq-express",
-        "update-freq-fast", "use-mainwindow", "use-new-layouter", "ini-warnings"};
+        "update-freq-fast", "use-mainwindow", "use-new-layouter", 
+        "ini-warnings", "perform-gc" };
 
     // note: these should be the NEW option names!
     public static String[] COMMENT_OUT_NAMES = {"tkenv-default-run", "cmdenv-runs-to-execute"};
